# virtual-site-datalake

./: .env  .example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_CONFIG.md  Dockerfile  GOVIEW_INTEGRATION.md  IFRAME_INTEGRATION.md  IoT绑定系统开发计划.md  LICENSE  README-3DTILES.md  README.md  TODO.md  build-fast.sh  build-remote.sh  build.sh  config.py  config.yaml  dataflow.mmd  debug.js  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fbx_to_glb_converter.py  iot_binding_node_support_completed.md  iot_binding_target_rules_implementation.md  nginx.conf  no-docker-script.sh  puppeteer-config.cjs  pyproject.toml  requirements.txt  run.bat  run.sh  test.html  test_binding_connection.py  test_enu_rotation_fix.py  test_extended_iot_bindings.py  test_iot_binding_fixes.md  test_node_binding_paths.py  test_node_selection_fix.md  (+1 more)
.cursor/rules/: virtualsite.mdc
app/: README.md  __init__.py  file_formats.json  main.py
app/auth/: utils.py
app/core/: minio_client.py
app/db/: mongo_db.py
app/iot/: connection_pool.py  mqtt_gateway.py
app/models/: attachment.py  chart.py  file.py  gaussian_splat.py  http.py  iot.py  iot_bindings.py  metadata.py  mqtt.py  scene.py  stream.py  threedtiles.py  transaction.py  user.py  websocket.py  wmts.py
app/routers/: attachments.py  auth.py  files.py  gaussian_splat.py  goview.py  http.py  iot.py  iot_bindings.py  iot_connections.py  metadata.py  mqtt.py  payments.py  public_models.py  scene.py  sketchfab.py  streams.py  tasks.py  threedtiles.py  websocket.py  wmts.py
app/services/: threedtiles_service.py  wmts_service.py
app/tasks/: __init__.py  file_converter.py  task_manager.py  threedtiles_processor.py  wmts_processor.py
app/utils/: mongo_init.py  redis.py  sms.py
doc/: auth.md  files.md  iot-binding-upgrade-plan.md  metadata.md  sketchfab.md
docs/: GOVIEW_MODIFICATIONS.md  WMTS瓦片系统实现文档.md  animation-usage-example.md  gaussian-splat-feature.md  iot-binding-extended-features.md  iot-binding-upgrade-plan.md  node-binding-path-upgrade.md  package-lock.json  websocket-usage.md
docs/docs/: CZML.md  iot.md
test/: add_test_mqtt.py  package.json  start-websocket-server.bat  start-websocket-server.sh  websocket_test_server.js
tests/: test_auth_utils.py  test_mongo_init.py
web/: index.html  orval.config.js  package-lock.json  package.json  vite.config.ts
web/cesium-gizmo/src/: CesiumGizmo.d.ts  CesiumGizmo.js  CesiumGizmo_old.js  GizmoPrimitive.js  GizmoUtil.js
web/go-view/: .env.development  .example  GoView组件开发指南.md  MQTT数据来源扩展开发计划.md  package.json  vite.config.ts  暗黑模式透明背景修复说明.md
web/src/: App.tsx  declarations.d.ts  index.css
web/src/components/: AnimationTab.css  AnimationTab.tsx  AssetTabs.css  AssetTabs.tsx  DataPathHelper.tsx  DynamicPropertyForm.tsx  GaussianSplatTab.tsx  IoTBindingConfigModal.tsx  IoTBindingModal.tsx  LayerDrawer.tsx  Login.tsx  MQTTChat.tsx  ModelList.tsx  SelectedModelPropertiesPanel.tsx  ThreeDTilesTab.tsx  TilesetViewerModal.tsx
web/src/config/: iframe.ts  tiandituConfig.ts
(+149 files in other folders)
