[project]
name = "virtualsite"
version = "0.1.0"
description = ""
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.68.1",
  "uvicorn==0.15.0",
  "python-multipart==0.0.5",
  "motor==2.5.1",
  "minio==7.1.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-dotenv==0.19.0",
  "email-validator==1.1.3",
  "pydantic==1.8.2",
  "alibabacloud-dysmsapi20170525==2.0.24",
  "alibabacloud-tea-openapi==0.3.8",
  "alibabacloud-tea-util>=0.3.9",
  "PyYAML==6.0.1",
  "redis==5.0.1",
  "requests==2.31.0",
  "aioredis==2.0.1",
  "aiomqtt==2.4.0",
  "neomodel==5.4.5",
  "pillow==11.2.1"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
